--- a/index.html
+++ b/index.html
@@ -12,36 +12,36 @@
   <div id="container">
     <header>
       <!-- 이름을 가장 위쪽에 -->
-      <h1>funnycom</h1>
-      <h2>Frontend Developer</h2>
+      <h1>Choi Jiyu Baik</h1>
+      <h2>Student</h2>
     </header>
     <!-- 내용 -->
     <main>
       <!-- 화면을 좌우로 나눔 -->
       <article id="left">
         <div id="pf-img">
-          <img src="./pf.png" alt="프로필 이미지">
+          <img src="./pf.jpg" alt="프로필 이미지" width="200" height="275">
         </div>
 
         <!-- 자기 소개 -->
         <section>
           <!-- 소개 내용은 <p>와 </p> 사이의 부분을 수정하세요 -->
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident repellendus debitis ipsam tempore quia ad. Ducimus sint vel porro eos debitis veniam quis, repellat odio neque, cum voluptate, natus doloremque!</p>
+          <p>5일만에 끝내는 깃/ 깃허브 입문의 8장 이력서 사이트 만들기 실습 중입니다.</p>
 
           <!-- sns 링크 부분 -->
           <!-- href="" 부분의 링크와 내용을 수정하세요 -->
           <ul id="sns">
             <li>
               <i class="fa fa-envelope" aria-hidden="true"></i>
-              <a href="mailto:your-email@example.com">your-email@example.com</a>              
+              <a href="mailto:your-email@example.com">02jiyu0302@naver.com</a>              
         </li>
             <li>
               <i class="fab fa-github" aria-hidden="true"></i>
-              <a href="https://github.com/gh-username">gh-username</a>              
+              <a href="https://github.com/gh-username">jiyuchoibaik</a>              
             </li>
             <li>
               <i class="fab fa-linkedin" aria-hidden="true"></i>
-              <a href="https://linkedin.com/linkedin-username">linkedin-username</a>
+              <a href="https://linkedin.com/linkedin-username">Don't have any linkedin account yet</a>
             </li>
             </ul>
         </section>
@@ -49,31 +49,18 @@
 
       <artile id="right">
         <section>
-          <h2>경력(work)</h2>
-          <!-- 경력 내용 수정 -->
-            <dl>
-              <dt>회사 A : 2018 ~ 2020</dt>
-              <dd>회사에서 맡았던 업무</dd>
-              <dd>기타 사항</dd>
-            </dl>
-            <dl>
-              <dt>회사 B : 2020 ~ 2022</dt>
-              <dd>회사에서 맡았던 업무</dd>              
-            </dl>  
-        </section>
-        <section>
           <h2>다룰 수 있는 기술(skills)</h2>
           <!-- 자신있는 기술 수정 -->
           <p>HTML/CSS</p>
           <p>Javascritpt</p>
-          <p>React</p>
+          <p>Java</p>
           <p>Github</p>
         </section>
         <section>
           <h2>학력(education)</h2>
           <!-- 학력 수정 -->
-          <p>2018.02 - XX 대학교 졸업(전공: 컴퓨터공학)</p>
-          <p>2012.02 - XX 고등학교 졸업</p>
+          <p>2023.03 ~ - 가천 대학교 재학학(전공: 컴퓨터공학)</p>
+          <p>2022.02 - 풍무 고등학교 졸업</p>
           <p> ... </p>
         </section>
       </artile>
