--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- 자기 소개 -->
         <section>
           <!-- 소개 내용은 <p>와 </p> 사이의 부분을 수정하세요 -->
-          <p>5일만에 끝내는 깃/ 깃허브 입문의 8장 이력서 사이트 만들기 실습 중입니다.</p>
+          <p>5일만에 끝내는 깃/ 깃허브 입문의 8장 이력서 사이트 만들기 실습 중입니다</p>
 
           <!-- sns 링크 부분 -->
           <!-- href="" 부분의 링크와 내용을 수정하세요 -->
